[tool.poetry]
name = "sport-route-stats"
version = "0.1.0"
description = ""
authors = ["Filip Augustyński <fkaugustynski@gmail.com>"]
readme = "README.md"
packages = [{include = "sport_route_stats"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
